# tc-fullstack-starter

./: .gitignore  CLAUDE.md  INTEGRATION.md  README.md
.github/workflows/: backend.yml  frontend-e2e.yml  frontend.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PR_REVIEW_PATTERNS.md  README.md  STYLE_GUIDE.md  pyproject.toml
backend/.claude/rules/api/: error-handling.md  public-api.md  rate-limiting.md  responses.md
backend/.claude/rules/code-style/: documentation.md  imports.md
backend/.claude/rules/database/: filters.md  pagination.md  security.md  session.md
backend/.claude/rules/tasks/: celery.md
backend/.claude/rules/testing/: assertions.md  client-usage.md  data-creation.md  style.md  url-generation.md
backend/.claude/rules/tooling/: typing.md
backend/app/: __init__.py  main.py  worker.py
backend/app/auth/: api_key.py  auth.py  jwt.py  keys.py  login.py  models.py  permissions.py
backend/app/auth/api/: login.py
backend/app/common/: __init__.py  fields.py  models.py  utils.py
backend/app/common/api/: errors.py  filters.py  paginate.py  rate_limit.py
backend/app/core/: celery.py  config.py  database.py  logging.py  redis.py  sentry.py
backend/app/example_domain/: __init__.py  tasks.py
backend/app/example_domain/api/: example_resources.py
backend/app/example_domain/models/: example_resource.py
backend/app/example_domain/public_api/: __init__.py  example_resources.py
backend/app/organization/: __init__.py
backend/app/organization/api/: api_keys.py
backend/app/organization/models/: api_key.py  organization.py
backend/migrations/: client.py  env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: base_factory.py  conftest.py  test_worker.py
backend/tests/auth/: test_api_key.py  test_login.py  test_models.py
backend/tests/common/: test_errors.py  test_fields.py  test_filters.py  test_rate_limit.py  test_utils.py
backend/tests/core/: test_celery.py  test_config.py  test_database.py  test_logfire.py  test_main.py  test_redis.py  test_sentry.py
backend/tests/example_domain/: factories.py  test_example_resources.py
backend/tests/example_domain/public_api/: test_example_resources.py
backend/tests/organization/: factories.py  test_api_keys.py  test_models.py
frontend/: .dockerignore  .env.e2e.example  .env.example  .gitignore  .lintstagedrc.json  CLAUDE.md  NOT_CARRIED_FORWARD.md  Procfile  README.md  STYLE_GUIDE.md  TESTING_GUIDE.md  eslint.config.js  jest.config.cjs  jest.setup.js  package-lock.json  package.json  playwright.config.ts  react-router.config.ts  tsconfig.jest.json  tsconfig.json
frontend/.husky/: pre-commit
frontend/app/: app.css  entry.client.tsx  prose.css  root.tsx  routes.ts
frontend/docs/: ARCHITECTURE.md  CUSTOMIZATION.md
(+88 files in other folders)
